--- a/WindowsUIWalla/ManageWalla/MainWindowTest2.xaml
+++ b/WindowsUIWalla/ManageWalla/MainWindowTest2.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Name="mainWindow" x:Class="TestManageWalla.MainWindow"
+﻿<Window x:Name="mainWindowTest2" x:Class="ManageWalla.MainWindowTest2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Manage Walla" Height="768" Width="1024" MinWidth="800" MinHeight="600" ScrollViewer.VerticalScrollBarVisibility="Disabled" Background="#FFFFF5F5">
