--- a/WindowsUIWalla/ManageWalla/WindowTest3.xaml
+++ b/WindowsUIWalla/ManageWalla/WindowTest3.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Name="MainWindow" x:Class="TestManageWalla.Window1"
+﻿<Window x:Name="mainWindowTest3" x:Class="ManageWalla.MainWindowTest3"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Window1" Height="679" Width="855">
