--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -3,6 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Main.xaml">
     <Application.Resources>
-         
+
+        <Style x:Key="styleButton" TargetType="{x:Type Button}">
+            <Setter Property="BorderThickness" Value="0.5" />
+            <Setter Property="Background" Value="#FFE6D4D4" />
+            <Setter Property="TextOptions.TextFormattingMode" Value="Ideal" />
+            <Setter Property="Margin" Value="6" />
+            <Setter Property="Padding" Value="4" />
+            <Setter Property="BorderBrush" Value="#FF616161" />
+            <Setter Property="Foreground" Value="#FFB82F5A" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Foreground" Value="#FF8D2042" />
+                    <Setter Property="Background" Value="#FFF3ECEC" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="styleStackCategory" TargetType="{x:Type StackPanel}">
+            <Setter Property="Background" Value="#FFB5F3A7"/>
+            <Setter Property="Height" Value="600" />
+            <Setter Property="Margin" Value="3" />
+        </Style>
+        
+        
     </Application.Resources>
 </Application>
