--- a/WindowsUIWalla/ManageWalla/Main.xaml
+++ b/WindowsUIWalla/ManageWalla/Main.xaml
@@ -1,40 +1,19 @@
-﻿<Window x:Name="mainWindow" x:Class="ManageWalla.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:ManageWalla" x:Name="mainWindow" x:Class="ManageWalla.MainWindow"
         Title="Main" Height="768" Width="1024" Loaded="MainWindow_Loaded" FontFamily="Tahoma" FontWeight="Light">
 
+
     <Window.Resources>
-        <ResourceDictionary Source="WallaControlTemplates.xaml" />
+        <ResourceDictionary Source="WallaControlTemplates.xaml" >
+
+            
+
+        </ResourceDictionary>
+
     </Window.Resources>
-    <!--        
 
-            <Style x:Key="CustomLinkButton" TargetType="Button">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <TextBlock TextDecorations="Underline">
-                    <ContentPresenter />
-                            </TextBlock>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-                
-                <Setter Property="Foreground" Value="Blue" />
-                <Setter Property="Cursor" Value="Hand" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="true">
-                        <Setter Property="Foreground" Value="Red" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
-
-            <Style TargetType="{x:Type TreeViewItem}">
-                <Setter Property="Foreground" Value="Blue"/>
-                <Setter Property="FontSize" Value="12"/>
-                <Setter Property="FontWeight" Value="Bold" />
-            </Style>
--->
-    
     <Grid x:Name="grid" >
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -44,14 +23,14 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        
         <StackPanel MinWidth="200" MaxWidth="300" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Column="0" Grid.Row="0" >
-            <StackPanel Background="#FFB5F3A7" Orientation="Vertical">
-                <ToggleButton x:Name="cmdCategory" MinHeight="25" Background="#FFB5F3A7" Content="Category" Checked="cmdCategory_Checked" />
 
-                <StackPanel x:Name="stackCategory" Style="{StaticResource styleStackCategory}" Visibility="Visible">
-                    
-                    <Grid x:Name="gridCategoryView" ShowGridLines="True">
+            <StackPanel Background="#FFB5F3A7" Orientation="Vertical">
+                <ToggleButton x:Name="cmdCategory" Height="34" Content="Category" Checked="cmdCategory_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}" Margin="6" />
+
+                <StackPanel x:Name="stackCategory"  Visibility="Visible">
+
+                                        <Grid x:Name="gridCategoryView">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="34" />
@@ -60,7 +39,7 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
 
-                        <TreeView x:Name="treeCategoryView" VerticalContentAlignment="Stretch" Background="{x:Null}" >
+                        <TreeView x:Name="treeCategoryView" VerticalContentAlignment="Stretch" >
                             <TreeViewItem Header="Barons Photo Album">
                                 <TreeViewItem>
                                     <TreeViewItem.Header>
@@ -148,7 +127,7 @@
                             <Button x:Name="cmdEditCategory" Content="Edit Existing" Click="cmdEditCategory_Click" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" SnapsToDevicePixels="True" />
                         </StackPanel>
                     </Grid>
-                    
+
                     <Grid x:Name="gridCatgeoryAddEdit" >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="25" />
@@ -160,10 +139,10 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Label Grid.Column="0" Grid.Row="0">Name </Label>
-                        <TextBox x:Name="txtCategoryAddName" Grid.Column="1" Grid.Row="0"></TextBox>
-                        <Label Grid.Column="0" Grid.Row="1">Description </Label>
-                        <TextBox x:Name="txtCategoryAddDescription" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Height="75" VerticalScrollBarVisibility="Auto"></TextBox>
+                        <Label Grid.Column="0" Grid.Row="0" Content="Name"/>
+                        <TextBox x:Name="txtCategoryAddName" Grid.Column="1" Grid.Row="0"/>
+                        <Label Grid.Column="0" Grid.Row="1" Content="Description"/>
+                        <TextBox x:Name="txtCategoryAddDescription" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Height="75" VerticalScrollBarVisibility="Auto"/>
 
                         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">
                             <Button x:Name="cmdAddEditCategorySave" Content="Save Edit" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" />
@@ -173,13 +152,11 @@
                         </StackPanel>
 
                     </Grid>
-                    
-                </StackPanel>
 
-        </StackPanel>
-            <StackPanel Orientation="Vertical" Background="#FFFFFF5B">
-                <ToggleButton x:Name="cmdTag" MinHeight="25" Background="#FFFFFF5B" Content="Tag" Checked="cmdTag_Checked" />
-                <Rectangle x:Name="rectangleTagBusy" Width="300" Height="500" Visibility="Collapsed" />
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Background="#FFFFFF5B" >
+                <ToggleButton x:Name="cmdTag" Height="34" Content="Tag" Checked="cmdTag_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}" />
                 <StackPanel x:Name="stackTag" Orientation="Vertical" Visibility="Visible" >
 
                     <Grid x:Name="gridTagView">
@@ -218,10 +195,10 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Label Grid.Column="0" Grid.Row="0">Name</Label>
-                        <TextBox x:Name="txtTagAddEditName" Grid.Column="1" Grid.Row="0"></TextBox>
-                        <Label Grid.Column="0" Grid.Row="1">Description</Label>
-                        <TextBox x:Name="txtTagAddEditDescription" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Height="75" VerticalScrollBarVisibility="Auto"></TextBox>
+                        <Label Grid.Column="0" Grid.Row="0" Content="Name"/>
+                        <TextBox x:Name="txtTagAddEditName" Grid.Column="1" Grid.Row="0"/>
+                        <Label Grid.Column="0" Grid.Row="1" Content="Description"/>
+                        <TextBox x:Name="txtTagAddEditDescription" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Height="75" VerticalScrollBarVisibility="Auto"/>
 
                         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">
                             <Button x:Name="cmdAddEditTagSave" Content="Save Edit" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" />
@@ -232,18 +209,21 @@
                     </Grid>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Vertical" Background="#FF5BFF79">
-                <ToggleButton x:Name="cmdSettings" MinHeight="25" Background="#FF5BFF79" Content="Settings" Checked="cmdSettings_Checked" />
-                <Rectangle x:Name="rectangleSettingsBusy" Width="300" Height="500" Visibility="Collapsed" />
+            <StackPanel Orientation="Vertical" Background="#FF5BFF79" >
+                <ToggleButton x:Name="cmdSettings" Height="34" Content="Settings" Checked="cmdSettings_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}"/>
+
                 <StackPanel x:Name="stackSettings" Orientation="Vertical" Visibility="Collapsed" >
-                    <Rectangle x:Name="rectangleSettingsDummy" Width="300" Height="500" />
+                    <Viewbox>
+                        <Rectangle x:Name="rectangleSettingsDummy" />
+                    </Viewbox>
                 </StackPanel>
             </StackPanel>
+
         </StackPanel>
 
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
 
-            <WrapPanel MinHeight="300" x:Name="wrapImages" >
+            <WrapPanel x:Name="wrapImages" >
                 <WrapPanel.Background>
                     <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                         <GradientStop Color="#FF16571F" Offset="0.747"/>
@@ -253,9 +233,8 @@
             </WrapPanel>
 
             <StackPanel Orientation="Vertical"  Background="#FF5B62FF">
-                <ToggleButton  x:Name="cmdView" MinHeight="25" Background="#FF5B62FF" Content="View" Checked="cmdView_Checked" />
-                <Rectangle x:Name="rectangleViewBusy" Width="600" Height="400" />
-                <StackPanel x:Name="stackView" Orientation="Vertical" Visibility="Collapsed" >
+                <ToggleButton  x:Name="cmdView" Height="34" Content="View" Checked="cmdView_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}"/>
+                <StackPanel x:Name="stackView" Orientation="Vertical" Visibility="Collapsed" Height="200">
                     <Grid x:Name="gridView" ShowGridLines="True">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
@@ -380,10 +359,11 @@
             </StackPanel>
 
             <StackPanel Orientation="Vertical" Background="#FFFF5B88">
-                <ToggleButton x:Name="cmdUpload" MinHeight="25" Background="#FFFF5B88" Content="Upload" Checked="cmdUpload_Checked" />
-                <Rectangle x:Name="rectangleUploadBusy" Width="600" Height="400" />
-                <StackPanel x:Name="stackUpload" Orientation="Vertical" Visibility="Collapsed" >
-                    <Rectangle x:Name="rectangleUploadDummy" Width="600" Height="400" />
+                <ToggleButton x:Name="cmdUpload" Height="34" Content="Upload" Checked="cmdUpload_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}" />
+                <StackPanel x:Name="stackUpload" Orientation="Vertical" Visibility="Collapsed" Height="200">
+                    <Viewbox>
+                        <Rectangle x:Name="rectangleUploadDummy" />
+                    </Viewbox>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
