--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -38,7 +38,31 @@
             </Style.Triggers>
         </Style>
 
-        
-        
+        <Style x:Key="styleTagBlock" TargetType="{x:Type TextBlock}">
+            <Setter Property="Background" Value="#FFE6D4D4" />
+            <Setter Property="Margin" Value="4" />
+            <Setter Property="Padding" Value="2" />
+            <Setter Property="Foreground" Value="#FFB82F5A" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Foreground" Value="#FF8D2042" />
+                    <Setter Property="Background" Value="#FFF3ECEC" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="styleRadioButton" TargetType="{x:Type RadioButton}">
+            <Setter Property="Background" Value="#FFE6D4D4" />
+            <Setter Property="Margin" Value="4" />
+            <Setter Property="Padding" Value="2" />
+            <Setter Property="Foreground" Value="#FFB82F5A" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Foreground" Value="#FF8D2042" />
+                    <Setter Property="Background" Value="#FFF3ECEC" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
     </Application.Resources>
 </Application>
