--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -6,7 +6,7 @@
 
         <Style x:Key="styleButton" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="#FFE6D4D4" />
-            <Setter Property="Margin" Value="6" />
+            <Setter Property="Margin" Value="4" />
             <Setter Property="Padding" Value="4" />
             <Setter Property="BorderBrush" Value="#FF616161" />
             <Setter Property="Foreground" Value="#FFB82F5A" />
@@ -21,31 +21,18 @@
 
         <Style x:Key="styleToggleButton" TargetType="{x:Type ToggleButton}">
             <Setter Property="Background" Value="#FFE6D4D4" />
-            <Setter Property="Margin" Value="6" />
+            <Setter Property="Margin" Value="4" />
             <Setter Property="Padding" Value="4" />
             <Setter Property="BorderBrush" Value="#FF616161" />
             <Setter Property="Foreground" Value="#FFB82F5A" />
             <Setter Property="TextBlock.FontSize" Value="16" />
             <Style.Triggers>
                 <Trigger Property="IsChecked" Value="true">
-                    <Setter Property="Foreground" Value="#FF8D2042" />
+                    <Setter Property="Foreground" Value="Black" />
                     <Setter Property="Background" Value="#FFF3ECEC" />
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="true">
-                    <Setter Property="Foreground" Value="#FF8D2042" />
-                    <Setter Property="Background" Value="#FFF3ECEC" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
-        <Style x:Key="styleTagBlock" TargetType="{x:Type TextBlock}">
-            <Setter Property="Background" Value="#FFE6D4D4" />
-            <Setter Property="Margin" Value="4" />
-            <Setter Property="Padding" Value="2" />
-            <Setter Property="Foreground" Value="#FFB82F5A" />
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="true">
-                    <Setter Property="Foreground" Value="#FF8D2042" />
+                    <Setter Property="Foreground" Value="Black" />
                     <Setter Property="Background" Value="#FFF3ECEC" />
                 </Trigger>
             </Style.Triggers>
@@ -54,11 +41,15 @@
         <Style x:Key="styleRadioButton" TargetType="{x:Type RadioButton}">
             <Setter Property="Background" Value="#FFE6D4D4" />
             <Setter Property="Margin" Value="4" />
-            <Setter Property="Padding" Value="2" />
+            <Setter Property="Padding" Value="4" />
             <Setter Property="Foreground" Value="#FFB82F5A" />
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="true">
-                    <Setter Property="Foreground" Value="#FF8D2042" />
+                    <Setter Property="Foreground" Value="Black" />
+                    <Setter Property="Background" Value="#FFF3ECEC" />
+                </Trigger>
+                <Trigger Property="IsChecked" Value="true">
+                    <Setter Property="Foreground" Value="Black" />
                     <Setter Property="Background" Value="#FFF3ECEC" />
                 </Trigger>
             </Style.Triggers>
