--- a/WindowsUIWalla/ManageWalla/Main.xaml
+++ b/WindowsUIWalla/ManageWalla/Main.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ManageWalla" x:Name="mainWindow" x:Class="ManageWalla.MainWindow"
-        Title="Main" Height="768" Width="1024" Loaded="MainWindow_Loaded" FontFamily="Tahoma" FontWeight="Light">
+        Title="Main" Height="768" Width="1024" Loaded="MainWindow_Loaded" FontFamily="Tahoma" FontWeight="Light" Closing="mainWindow_Closing">
 
 
     <Window.Resources>
@@ -25,7 +25,7 @@
 
         <StackPanel MinWidth="200" MaxWidth="300" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Column="0" Grid.Row="0" >
 
-            <StackPanel Background="#FFB5F3A7" Orientation="Vertical">
+            <StackPanel Background="#FFC2FFB4" Orientation="Vertical">
                 <ToggleButton x:Name="cmdCategory" Height="34" Content="Category" Checked="cmdCategory_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}" Margin="6" />
 
                 <StackPanel x:Name="stackCategory"  Visibility="Visible">
@@ -155,7 +155,7 @@
 
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Vertical" Background="#FFFFFF5B" >
+            <StackPanel Orientation="Vertical" Background="#FFFFFFA1" >
                 <ToggleButton x:Name="cmdTag" Height="34" Content="Tag" Checked="cmdTag_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}" />
                 <StackPanel x:Name="stackTag" Orientation="Vertical" Visibility="Visible" >
 
@@ -169,9 +169,9 @@
                         </Grid.ColumnDefinitions>
                         
                         <WrapPanel x:Name="wrapMyTags" Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-                            <RadioButton Style="{StaticResource styleRadioButton}" GroupName="GroupTag" Content="RadioButton" />
+                            <RadioButton Style="{StaticResource styleRadioButton}" Template="{StaticResource templateRadioButton}" GroupName="GroupTag" Content="RadioButton" />
 
-                            <TextBlock Style="{StaticResource styleTagBlock}" ><Run Text="my first tag"/></TextBlock>
+
                             <TextBlock><Run Text="my second tag"/></TextBlock>
                             <TextBlock><Run Text="my third tag"/></TextBlock>
                             <TextBlock><Run Text="my fifth tag"/></TextBlock>
@@ -186,7 +186,7 @@
                         </StackPanel>
                     </Grid>
 
-                    <Grid x:Name="gridTagAddEdit">
+                    <Grid x:Name="gridTagAddEdit" Background="#FFFFFFDE" Margin="5" >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="25" />
                             <RowDefinition Height="75" />
@@ -198,20 +198,20 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Grid.Row="0" Content="Name"/>
-                        <TextBox x:Name="txtTagAddEditName" Grid.Column="1" Grid.Row="0"/>
+                        <TextBox x:Name="txtTagAddEditName" Margin="3" Grid.Column="1" Grid.Row="0" MaxLines="1" MaxLength="20" CharacterCasing="Upper" Cursor="IBeam" PreviewTextInput="txtTagAddEditName_PreviewTextInput" Text="12345678901234567890"/>
                         <Label Grid.Column="0" Grid.Row="1" Content="Description"/>
-                        <TextBox x:Name="txtTagAddEditDescription" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Height="75" VerticalScrollBarVisibility="Auto"/>
+                        <TextBox x:Name="txtTagAddEditDescription" Margin="3" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Height="75" VerticalScrollBarVisibility="Auto" Text="W234567890123456789XW234567890123456789XW234567890123456789XW234567890123456789XW234567890123456789X" MaxLines="1" MaxLength="100"/>
 
                         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">
                             <Button x:Name="cmdAddEditTagSave" Content="Save Edit" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" Click="cmdAddEditTagSave_Click" />
                             <Button x:Name="cmdAddEditTagCancel" Content="Cancel" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" Click="cmdAddEditTagCancel_Click" />
-                            <Button x:Name="cmdAddEditTagDelete" Content="Delete" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" />
+                            <Button x:Name="cmdAddEditTagDelete" Content="Delete" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" Click="cmdAddEditTagDelete_Click" />
                         </StackPanel>
 
                     </Grid>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Vertical" Background="#FF5BFF79" >
+            <StackPanel Orientation="Vertical" Background="#FFBAFFD9" >
                 <ToggleButton x:Name="cmdSettings" Height="34" Content="Settings" Checked="cmdSettings_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}"/>
 
                 <StackPanel x:Name="stackSettings" Orientation="Vertical" Visibility="Collapsed" >
@@ -225,18 +225,11 @@
 
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
 
-            <WrapPanel x:Name="wrapImages" >
-                <WrapPanel.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-                        <GradientStop Color="#FF16571F" Offset="0.747"/>
-                        <GradientStop Color="#FF34BB46" Offset="0.386"/>
-                    </LinearGradientBrush>
-                </WrapPanel.Background>
-            </WrapPanel>
+            <WrapPanel x:Name="wrapImages" Background="White" />
 
-            <StackPanel Orientation="Vertical"  Background="#FF5B62FF">
+            <StackPanel Orientation="Vertical"  Background="#FFABAEFF">
                 <ToggleButton  x:Name="cmdView" Height="34" Content="View" Checked="cmdView_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}"/>
-                <StackPanel x:Name="stackView" Orientation="Vertical" Visibility="Collapsed" Height="200">
+                <StackPanel x:Name="stackView" Orientation="Vertical" Visibility="Visible" Height="200">
                     <Grid x:Name="gridView" ShowGridLines="True">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
@@ -360,7 +353,7 @@
                 </StackPanel>
             </StackPanel>
 
-            <StackPanel Orientation="Vertical" Background="#FFFF5B88">
+            <StackPanel Orientation="Vertical" Background="#FFFFABC2">
                 <ToggleButton x:Name="cmdUpload" Height="34" Content="Upload" Checked="cmdUpload_Checked"  Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}" />
                 <StackPanel x:Name="stackUpload" Orientation="Vertical" Visibility="Collapsed" Height="200">
                     <Viewbox>
