--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -55,5 +55,19 @@
             </Style.Triggers>
         </Style>
 
+        <Style x:Key="styleImageThumb" TargetType="{x:Type Image}" >
+            <Setter Property="Margin" Value="4" />
+            <Setter Property="Stretch" Value="None" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <BlurEffect Radius="3"/>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        
     </Application.Resources>
 </Application>
